# Category

./: README.md  category.opam  dune-project
lib/: adjunction.ml  basic.ml  boolean.ml  categories.ml  comp.ml  dune  fun.ml  functor.ml  kleisli.ml  unit.ml  void.ml
tests/: dune  test.ml
